<resources>
    <string name="app_name" translatable="false">QRecorder</string>
    <string name="app_name_label" translatable="false">QRecorder</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="interstitial_ad_unit" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_ad_unit" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <string name="main_screen_call_all_fragment">All</string>
    <string name="main_screen_call_incoming_fragment">Incoming</string>
    <string name="main_screen_call_outgoing_fragment">Outgoing</string>

    <string name="apply_text">Ok</string>
    <string name="cancel_text">Cancel</string>

    <string name="dialog_delete_call_confirm_error">There was a problem with the playback. The file may have been deleted. Do you want to delete this file from the database?</string>
    <string name="dialog_delete_call_confirm">Are you sure you want to delete this file?</string>
    <string name="record_enable">Record enable</string>
    <string name="record_disable">Record disable</string>


    <string name="no_record_call_title">No recorded calls</string>
    <string name="search_title">Search</string>
    <string name="action_delete_title">Delete</string>
    <string name="action_add_favorite_title">Add to Favorites</string>
    <string name="action_remove_favorite_title">Remove from Favorites</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="sort_by_name">Sort by Name</string>

    <string name="main_screen_call_favorite_fragment">Favorite</string>

    <string name="hint_text_enter_desc_label">Theme</string>
    <string name="hint_text_enter_desc">Enter a note</string>
    <string name="call_recorded">Call is recorded</string>
    <string name="change_save_folder_to">Save folder changed to</string>
    <string name="share_record">Share this record</string>
    <string name="share_add_filter">Do not record conversations with this contact</string>
    <string name="delete_contact">Delete record</string>
    <string name="dialog_call_type_record_all">All calls</string>
    <string name="dialog_call_type_record_incoming">Incoming calls</string>
    <string name="dialog_call_type_record_outgoing">Outgoing calls</string>
    <string name="dialog_call_type_record_unknown">Unknown numbers</string>
    <string name="dialog_call_type_record_change">The type of telephone conversations changed to:</string>

    <string name="pin_title_set">Enter PIN</string>
    <string name="pin_title_confirm">Confirm PIN</string>
    <string name="pin_empty_password">Enter password</string>
    <string name="pin_password_not_confirm">Password not verified</string>
    <string name="pin_password_confirm">Password saved</string>

    <string name="settings">Settings</string>
    <string name="settings_record_type">Variant of record</string>
    <string name="settings_ignore_list">Ignored contacts for recording</string>
    <string name="settings_pin">PIN protection</string>
    <string name="settings_path">Path to records</string>
    <string name="settings_sort">Sorting method</string>
    <string name="settings_share">Share</string>
    <string name="settings_rate_us">Rate us</string>
    <string name="settings_pin_select_title">Set PIN</string>
    <string name="settings_pin_select_desc">Set a PIN to protect your recorded conversations</string>

    <string name="dialog_call_sort_change">Call sorting type changed to:</string>

    <string name="share_text">For recording phone conversations I use Call Recorder, I think that you might like it. Install Call Recorder on your phone:</string>

    <string name="ignore_list_title">Ignored contacts</string>
    <string name="ignore_list_delete_confirm">Delete a contact from the list that is ignored for writing?</string>
    <string name="ignore_contact_add">Contact is added to the list</string>
    <string name="ignore_contact_add_error">An error occurred while adding the contact</string>
    <string name="ignore_contact_exists">In the list already exists such number</string>

    <string name="play_contact_default">Play in your player</string>
    <string name="dialog_save_desc_confirm">Save changes before quitting?</string>
    <string name="no_text">No</string>
    <string name="yes_text">Yes</string>

    <string name="delete_text">Delete</string>
    <string name="delete_header">Deleting records</string>
    <string name="dialog_delete_all_check">Are you sure you want to delete the selected records?</string>
    <string name="fab_text_delete_all">Delete selected records</string>
    <string name="fab_text_delete_contacts">Delete contact records</string>

    <string name="settings_action_after_call">Select an action after a call</string>
    <string name="dialog_action_after_call_notification">Show notification</string>
    <string name="dialog_action_after_call_open">Open the record editing window</string>
    <string name="dialog_action_after_call_change">The type of action after the call is changed to:</string>

    <string name="dialog_attention_label">Attention</string>
    <string name="dialog_attention">The application may not work correctly on some devices. To improve the quality of the recording, we advise you to add sound during the conversation.</string>

    <string name="settings_max_call_volume">Set the volume during a call to the maximum</string>

    <string name="settings_lang">Language</string>
    <string name="dialog_lang_default">Default</string>
    <string name="dialog_lang_en">English</string>
    <string name="dialog_lang_ru">Русский</string>
    <string name="dialog_lang_de">Deutsch</string>
    <string name="dialog_lang_es">Español</string>
    <string name="dialog_lang_fr">Français</string>
    <string name="dialog_lang_ja">日本語</string>
    <string name="dialog_lang_ko">한국어</string>
    <string name="dialog_lang_pt">Portugues</string>
    <string name="dialog_lang_zh">中文（简体）</string>
    <string name="dialog_lang_zh_rtw">中文（繁體）</string>

    <string name="dictaphone_label">Dictaphone</string>
    <string name="dialog_delete_dictaphone">Do you really want to delete the record?</string>
    <string name="dictaphone_edit_text_hint">Record name</string>
    <string name="dialog_action_after_call_nothing">Do nothing</string>

    <string name="dictaphone_toast_start_record">Recording started</string>
    <string name="dictaphone_toast_stop_record">Recording stopped</string>
    <string name="dictaphone_toast_stop_error">Error occurred while recording</string>
    <string name="settings_file_extension">Choose file extension</string>
    <string name="dialog_file_ext_amr">AMR</string>
    <string name="dialog_file_ext_three_gp">3GP</string>
    <string name="dialog_file_ext_mp_four">MP4</string>
    <string name="settings_audio_source_label">Choose audio source manually</string>
    <string name="settings_audio_source">Choose audio source</string>
    <string name="settings_audio_source_desc">Try to choose audio source manually. Attention! Unstable functioning of the program is possible. The conversation may not be recorded.</string>
    <string name="dialog_audio_source_vc">Voice Communication</string>
    <string name="dialog_audio_source_mic">Mic</string>
    <string name="dialog_audio_source_vr">Voice Recognition</string>
    <string name="dialog_audio_source_v_call">Voice Call</string>
    <string name="dialog_audio_source_default">Default</string>
    <string name="audio_source_error">Error occurred while recording. The record is not saved.</string>
    <string name="notification_enable_text">Automatic recording enabled</string>
    <string name="notification_disable_text">Automatic recording disabled</string>
    <string name="settings_widget">Activate widget for recording</string>
    <string name="dialog_widget_body">We added a new function on the call screen. Now you can start recording a conversation at any moment, even if you disabled automatic call recording. The widget will appear automatically during the call. You can drag it to any place appropriate for you. To start/stop recording tap the upper part of the widget. You can remove the widget in the settings menu.</string>


    <string name="record_time">Recording time</string>
    <string name="settings_other">Additional settings</string>

    <string name="skins">Themes</string>
    <string name="theme_red">Red</string>
    <string name="theme_blue">Blue</string>

    <string name="dialog_system_alert_window">To let the recording widget work on the call screen it\'s necessary to give a special permission. If you refuse, the widget won\'t appear on the call screen. You can turn on and turn off the widget in the settings.</string>

    <string name="settings_audio_source_default_desc">Default audio source</string>
    <string name="settings_audio_source_vc_desc">Microphone audio source tuned for voice communications such as VoIP</string>
    <string name="settings_audio_source_mic_desc">Microphone audio source</string>
    <string name="settings_audio_source_vr_desc">Microphone audio source tuned for voice recognition</string>
    <string name="settings_audio_source_v_call_desc">Voice call uplink + downlink audio source (Attention! May not work on all devices).</string>

    <string name="toast_error">An error occured.Please try again.</string>
    <string name="toast_export">File is downloaded</string>
    <string name="theme_green">Green</string>
    <string name="share_record_google_drive">Upload to Google Drive</string>
    <string name="list_title_today">Today</string>
    <string name="list_title_yesterday">Yesterday</string>

    <string name="settings_post_call_time">Delayed recording</string>
    <string name="settings_post_call_time_desc">Set the time of call record delay in seconds</string>
    <string name="dialog_post_call_time_error">The delay time should be from 0 to 20 seconds</string>
    <string name="sec">sec</string>

    <string name="fab_text_delete_dictaphone">Delete voice recordings</string>
    <string name="custom_tab_call_text">Call records</string>
    <string name="custom_tab_voice_text">Voice records</string>


    <string name="rateus">Rate Us</string>
    <string name="aboutus">About Us</string>
    <string name="shareapp">Share App</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="moreapps">More Apps</string>
    <string name="developer" translatable="false">© Pharid</string>
    <string name="footer">Copyright © QRecorder 2019. All Right Reserved</string>
    <string name="app_description">The best recording tool</string>
    <string name="home">Home</string>
</resources>
