<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
          android:title="@string/search_title"
          android:icon="@drawable/ic_action_search"
          app:showAsAction="always"
          app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item android:id="@+id/action_delete"
        android:title="Delete"
        android:icon="@drawable/toolbar_icon_delete"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/action_delete_contacts"
                android:title="@string/fab_text_delete_contacts"
                app:showAsAction="never"/>
            <item android:id="@+id/action_delete_all"
                android:title="@string/fab_text_delete_all"
                app:showAsAction="never"/>
            <item android:id="@+id/action_delete_dictaphone"
                android:title="@string/fab_text_delete_dictaphone"
                app:showAsAction="never"/>
        </menu>
    </item>

</menu>