<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_marginBottom="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/settings_margin"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/audio_source_default_layout"
                android:layout_marginBottom="@dimen/settings_margin"
                android:layout_marginTop="@dimen/settings_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="left"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:textSize="@dimen/settings_text_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_audio_source_default"
                        android:textColor="@color/color_edit_record_text"/>

                    <TextView
                        android:textSize="@dimen/settings_desc_text_size"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/settings_audio_source_default_desc"
                        android:textColor="@color/color_list_text_desc_color"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/settings_margin"
                    android:gravity="right">
                    <ImageView
                        android:layout_gravity="center"
                        android:id="@+id/audio_source_default_ic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/settings_check_ic"/>
                </LinearLayout>
            </LinearLayout>

            <include layout="@layout/demarcation_line" />

            <LinearLayout
                android:id="@+id/audio_source_vc_layout"
                android:layout_marginBottom="@dimen/settings_margin"
                android:layout_marginTop="@dimen/settings_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="left"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:textSize="@dimen/settings_text_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_audio_source_vc"
                        android:textColor="@color/color_edit_record_text"/>

                    <TextView
                        android:textSize="@dimen/settings_desc_text_size"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/settings_audio_source_vc_desc"
                        android:textColor="@color/color_list_text_desc_color"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/settings_margin"
                    android:gravity="right">
                    <ImageView
                        android:layout_gravity="center"
                        android:id="@+id/audio_source_vc_ic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/settings_check_ic"/>
                </LinearLayout>
            </LinearLayout>

            <include layout="@layout/demarcation_line" />

            <LinearLayout
                android:id="@+id/audio_source_mic_layout"
                android:layout_marginBottom="@dimen/settings_margin"
                android:layout_marginTop="@dimen/settings_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="left"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:textSize="@dimen/settings_text_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_audio_source_mic"
                        android:textColor="@color/color_edit_record_text"/>

                    <TextView
                        android:textSize="@dimen/settings_desc_text_size"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/settings_audio_source_mic_desc"
                        android:textColor="@color/color_list_text_desc_color"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/settings_margin"
                    android:gravity="right">
                    <ImageView
                        android:layout_gravity="center"
                        android:id="@+id/audio_source_mic_ic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/settings_check_ic"/>
                </LinearLayout>
            </LinearLayout>

            <include layout="@layout/demarcation_line" />

            <LinearLayout
                android:id="@+id/audio_source_vr_layout"
                android:layout_marginBottom="@dimen/settings_margin"
                android:layout_marginTop="@dimen/settings_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="left"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:textSize="@dimen/settings_text_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_audio_source_vr"
                        android:textColor="@color/color_edit_record_text"/>

                    <TextView
                        android:textSize="@dimen/settings_desc_text_size"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/settings_audio_source_vr_desc"
                        android:textColor="@color/color_list_text_desc_color"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/settings_margin"
                    android:gravity="right">
                    <ImageView
                        android:layout_gravity="center"
                        android:id="@+id/audio_source_vr_ic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/settings_check_ic"/>
                </LinearLayout>
            </LinearLayout>

            <include layout="@layout/demarcation_line" />

            <LinearLayout
                android:id="@+id/audio_source_v_call_layout"
                android:layout_marginBottom="@dimen/settings_margin"
                android:layout_marginTop="@dimen/settings_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="left"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:textSize="@dimen/settings_text_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_audio_source_v_call"
                        android:textColor="@color/color_edit_record_text"/>

                    <TextView
                        android:textSize="@dimen/settings_desc_text_size"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/settings_audio_source_v_call_desc"
                        android:textColor="@color/color_list_text_desc_color"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/settings_margin"
                    android:gravity="right">
                    <ImageView
                        android:layout_gravity="center"
                        android:id="@+id/audio_source_v_call_ic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/settings_check_ic"/>
                </LinearLayout>
            </LinearLayout>

            <include layout="@layout/demarcation_line" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_marginBottom="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="bottom">


        <!--/*banner */ -->

        <com.google.android.gms.ads.AdView
            android:id="@+id/admob_adview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit"/>
    </LinearLayout>

</LinearLayout>
